# purescript-waterslide-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/basic/: .gitignore  Cargo.toml  README.md
examples/basic/frontend/: bower.json  package.json
examples/basic/frontend/src/: Main.purs  Options.purs
examples/basic/frontend/src/Data/: Falafel.purs
examples/basic/src/: main.rs
purescript_bridge/: Cargo.toml
purescript_bridge/src/: lib.rs
purescript_bridge_codegen/: Cargo.toml
purescript_bridge_codegen/src/: lib.rs  purescript.rs
purescript_bridge_tests/: Cargo.toml
purescript_bridge_tests/tests/: enums.rs  modules.rs  structs.rs
purescript_waterslide/: Cargo.toml
purescript_waterslide/src/: default_implementations.rs  lib.rs  purs_constructor.rs  purs_module.rs  purs_type.rs  type_info.rs
purescript_waterslide_codegen/: Cargo.toml
purescript_waterslide_derive/: Cargo.toml
purescript_waterslide_derive/src/: generics.rs  lib.rs  purescript.rs
purescript_waterslide_tests/: Cargo.toml
purescript_waterslide_tests/tests/: enums.rs  modules.rs  structs.rs  to_purs_constructor_impls.rs  to_purs_type_impls.rs
