[package]
name = "purescript_waterslide"
version = "0.2.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
description = "Generate Purescript types from your Rust types"
homepage = "https://github.com/tomhoule/purescript-waterslide-rs"
repository = "https://github.com/tomhoule/purescript-waterslide-rs"
keywords = ["purescript"]
license = "MIT/Apache-2.0"

[dependencies]
