[package]
name = "purescript_waterslide_tests"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]

[dependencies]
chrono = "*"
purescript_waterslide = { path = "../purescript_waterslide", features = ["uuid_support", "chrono_support"] }
purescript_waterslide_derive = { path = "../purescript_waterslide_derive" }
void = "*"
uuid = "*"
