[package]
name = "basic"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]

[dependencies]
futures = "*"
purescript_waterslide = { path = "../../purescript_waterslide" }
purescript_waterslide_codegen = { path = "../../purescript_waterslide_codegen" }
serde_derive = "*"
serde = "*"
serde_json = "*"
tokio-core = "*"
tokio-io = "*"
hyper = "*"
